# pg-catbench

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  catbench.control  complain_header.sql
benchmarks/: numeric.sql
docs/: data-model.dot
functions/: count_benchmark_results_for_system_config.sql  generate_benchmark_commit_permutations.sql  generate_test.sql  get_benchmark.sql  get_benchmark_id.sql  get_benchmark_test_ids.sql  get_benchmarks_todo.sql  get_commit_id.sql  get_executable_hash.sql  get_function_id.sql  get_next_benchmark_run.sql  get_or_insert_file.sql  get_tests_for_next_cycle.sql  insert_result.sql  mark_run_as_finished.sql  mark_run_as_started.sql  new_benchmark.sql  new_benchmark_file.sql  new_file_mapping.sql  new_function.sql  new_function_mapping.sql  new_run.sql  next_benchmark.sql  next_commit.sql  register_host.sql  register_system_config.sql  schedule_run.sql  set_executable_hash.sql
procedures/: merge_new_commits.sql  run_test.sql
src/: main.rs
tables/: benchmark_files.sql  benchmarks.sql  commit_files.sql  commits.sql  compilations.sql  file_mappings.sql  files.sql  function_mappings.sql  functions.sql  hosts.sql  results.sql  runs.sql  system_configs.sql  tests.sql
tests/expected/: catbench.out
tests/sql/: catbench.sql
views/: vci.sql  vcommits.sql  vreport.sql  vresults.sql
