[package]
name = "pg-catbench"
version = "0.1.0"
edition = "2021"

[dependencies]
postgres = {version = "0.19", features = ["with-serde_json-1", "with-uuid-1"] }
serde = "1.0"
serde_json = "1.0"
sysinfo = "0.30"
indicatif = "0.17"
rand = "0.8"
uuid = "1.10"
regex = "1.10"
wherr = "0.1"
git2 = "0.19"
sha2 = "0.10"
hex = "0.4"
